--- a/keynote.html
+++ b/keynote.html
@@ -7,15 +7,14 @@
     <!-- Kevoree Keynote Framework -->
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="framework/js/show.js"></script>
-		
 </head>
 
 <div id="present">
-    <iframe></iframe>
+    <iframe src="index.html"></iframe>
 </div>
 
 <div id="future">
-    <iframe></iframe>
+    <iframe src="index.html"></iframe>
 </div>
 
 <div id="slideidx">?</div>
